# tauri-plugin-remote-push

./: Cargo.toml  README.md  package.json
android/: build.gradle.kts  settings.gradle  settings.gradle.kts
android/src/main/java/com/tauri/remotepush/: FCMService.kt  PushNotificationPlugin.kt
docs/: BUILD_THIS_PUSH_PLUGIN.md  CONSIDERATIONS.md
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
ios/Sources/: PushNotificationPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
