[package]
name = "tauri-plugin-remote-push"
version = "1.0.10"
authors = [ "You" ]
description = "A Tauri plugin for remote push notifications on iOS and Android."
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/tauri-plugin-remote-push" # TODO: Replace with your repository URL
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-remote-push"

[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0"
thiserror = "2"
serde_json = "1.0.140"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }

[package.metadata.tauri-plugin]
android-src = "android"
ios-src = "ios"
